parse and validate json configuration
Functional Suitability : Proof of Concept of Parsing and Validating JSON

--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "symon"
   ],
   "scripts": {
-    "pretest": "npm run format",
+    "pretest": "npm run check-format",
     "posttest": "eslint . --ext .ts --config .eslintrc",
     "prepack": "rm -rf lib && tsc -b && oclif-dev readme",
     "test": "nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\"",
     "version": "oclif-dev readme && git add README.md",
-    "format": "prettier --check ."
+    "format": "prettier --write .",
+    "check-format": "prettier --check ."
   },
   "dependencies": {
     "@oclif/command": "^1.8.0",
