feat: notif mailgun (#13)
* feature: notification mailgun

* feature: add config.json.example

* fix lint

* remove unused

* fix function param

* fix format

--- a/config.json.example
+++ b/config.json.example
@@ -3,6 +3,17 @@
   "notifications": [
     {
       "id": "unique-id",
+      "type": "mailgun",
+      "recipients": [
+        "you@yourmail.com"
+      ],
+      "data": {
+        "apiKey": "YOUR_API_KEY",
+        "domain": "YOUR_DOMAIN"
+      }
+    },
+    {
+      "id": "unique-id",
       "type": "smtp",
       "recipients": ["a@a.com"],
       "data": {
