--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "@oclif/command": "^1.8.0",
     "@oclif/config": "^1.17.0",
     "@oclif/plugin-help": "^3.2.2",
+    "mailgun-js": "^0.22.0",
     "tslib": "^1.14.1"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1.26.0",
     "@oclif/test": "^1.2.8",
     "@types/chai": "^4.2.15",
+    "@types/mailgun-js": "^0.22.11",
     "@types/mocha": "^5.2.7",
     "@types/node": "^10.17.54",
     "chai": "^4.3.0",
