--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@oclif/plugin-help": "^3.2.2",
     "axios": "^0.21.1",
     "mailgun-js": "^0.22.0",
+    "nodemailer": "^6.5.0",
+    "smtp-server": "^3.8.0",
     "tslib": "^1.14.1"
   },
   "devDependencies": {
@@ -39,6 +41,8 @@
     "@types/mailgun-js": "^0.22.11",
     "@types/mocha": "^5.2.7",
     "@types/node": "^10.17.54",
+    "@types/nodemailer": "^6.4.0",
+    "@types/smtp-server": "^3.5.6",
     "chai": "^4.3.0",
     "eslint": "^5.16.0",
     "eslint-config-oclif": "^3.1.0",
@@ -47,6 +51,7 @@
     "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
     "mocha": "^5.2.0",
+    "nodemailer-mock": "^1.5.4",
     "nyc": "^14.1.1",
     "prettier": "2.2.1",
     "ts-node": "^8.10.2",
