--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "symon-agent",
+  "name": "http-probe",
   "description": "Synthetic monitoring made easy",
   "version": "0.0.0",
   "license": "UNLICENSED",
