--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@oclif/command": "^1.8.0",
     "@oclif/config": "^1.17.0",
     "@oclif/plugin-help": "^3.2.2",
+    "@types/chai-spies": "^1.0.3",
     "axios": "^0.21.1",
     "mailgun-js": "^0.22.0",
     "nodemailer": "^6.5.0",
@@ -44,6 +45,7 @@
     "@types/nodemailer": "^6.4.0",
     "@types/smtp-server": "^3.5.6",
     "chai": "^4.3.0",
+    "chai-spies": "^1.0.0",
     "eslint": "^5.16.0",
     "eslint-config-oclif": "^3.1.0",
     "eslint-config-oclif-typescript": "^0.1.0",
