feat: Implements http probing using axios (#14)
* feat: wraps axios

* fix: update package

* fix: formatting

* feat: measure time for a request

* merge package conflict

* feat: refactore request

* adding prober

* resolve conflict package-lock

* fix: typo

* fix: update probes

* twaek cofnig

* feat: link response to validation

* feat: add repeating probing at setInterval
1. added loop to probe all of probe[]
2. add timeout to requestconfig
3. add handler for error from axios
4. add interval before repeat probing
5. remove commented codes

* test: update unit teset
1. update unit teset
2. run prettier

* fix: filenames

* fix: tweak response object when error

* merge conflict

* test: disable interval for testing

--- a/config.json.example
+++ b/config.json.example
@@ -1,5 +1,5 @@
 {
-  "interval": 20,
+  "interval": 0,
   "notifications": [
     {
       "id": "unique-id",
@@ -48,6 +48,7 @@
       "request": {
         "method": "POST",
         "url": "https://something/login",
+        "timeout": 7000,
         "headers": {
           "Authorization": ""
         },
