Probe Alerts validation (#33)
* feat: add validation for alert

* test: configs

* fix: config alerts

--- a/config.json.example
+++ b/config.json.example
@@ -57,7 +57,7 @@
           "password": "somepassword"
         }
       },
-      "alerts": ["status-not-200", "response-greater-than-200"]
+      "alerts": ["status-not-2xx", "response-time-greater-than-200-ms"]
     }
   ]
 }
